--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
+poem = { version = "1.3.40", features = ["test"] }
+tokio = { version = "1.21.0", features = ["full"] }
