--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+config = "0.13.2"
 poem = { version = "1.3.40", features = ["test"] }
+poem-openapi = { version = "2.0.11", features = ["swagger-ui"] }
+sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
+serde = { version = "1.0.144", features = ["derive"] }
 tokio = { version = "1.21.0", features = ["full"] }
