--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ rand = "0.8.5"
 sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
 serde = { version = "1.0.144", features = ["derive"] }
 tokio = { version = "1.21.0", features = ["full"] }
+tracing = "0.1.36"
+tracing-subscriber = "0.3.15"
 validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
