--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+chrono = "0.4.22"
 config = "0.13.2"
 poem = { version = "1.3.40", features = ["test"] }
 poem-openapi = { version = "2.0.11", features = ["swagger-ui"] }
@@ -22,6 +23,7 @@ serde = { version = "1.0.144", features = ["derive"] }
 tokio = { version = "1.21.0", features = ["full"] }
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
+tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
 validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
