--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-t
 serde = { version = "1.0.144", features = ["derive"] }
 tokio = { version = "1.21.0", features = ["full"] }
 tracing = "0.1.36"
+tracing-bunyan-formatter = "0.3.3"
+tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.15", features = ["json"] }
 tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
 validator = { version = "0.16.0", features = ["derive"] }
