--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ tokio = { version = "1.21.0", features = ["full"] }
 tracing = "0.1.36"
 tracing-bunyan-formatter = "0.3.3"
 tracing-futures = "0.2.5"
-tracing-subscriber = { version = "0.3.15", features = ["json"] }
-tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
+tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "std"] }
 validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
 serial_test = "*"
+tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
