--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ chrono = "0.4.22"
 config = "0.13.2"
 poem = { version = "1.3.47", features = ["test"] }
 poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
-rand = "0.8.5"
 sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
 serde = { version = "1.0.144", features = ["derive"] }
 tokio = { version = "1.21.0", features = ["full"] }
@@ -28,5 +27,10 @@ tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "st
 validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
+rand = "0.8.5"
 serial_test = "*"
 tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
+
+[profile.release]
+strip = true
+lto = true
