--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ config = "0.13.2"
 poem = { version = "1.3.47", features = ["test"] }
 poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
 sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.144", features = ["derive"] }
 tokio = { version = "1.21.0", features = ["full"] }
 tracing = "0.1.36"
