--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,16 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+anyhow = "1.0.66"
 chrono = "0.4.22"
 config = "0.13.2"
 poem = { version = "1.3.47", features = ["test"] }
 poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
-sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
+sea-orm = { version = "0.10.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
+sea-orm-migration = "0.10.2"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.144", features = ["derive"] }
+sqlx = { version = "0.6", default-features = false, features = ["postgres"] }
 tokio = { version = "1.21.0", features = ["full"] }
 tracing = "0.1.36"
 tracing-bunyan-formatter = "0.3.3"
