--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = "0.4.22"
 config = "0.13.2"
 poem = { version = "1.3.47", features = ["test"] }
 poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
 sea-orm-migration = "0.9.2"
 secrecy = { version = "0.8.0", features = ["serde"] }
@@ -34,6 +35,9 @@ validator = { version = "0.16.0", features = ["derive"] }
 rand = "0.8.5"
 serial_test = "*"
 tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
+wiremock = "0.5"
+fake = "~2.3"
+serde_json = "1.0"
 
 [profile.release]
 strip = true
