--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,43 +6,8 @@ autotests = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-path = "src/lib.rs"
-
-[[bin]]
-path = "src/main.rs"
-name = "zero2prod"
-
-[[test]]
-path = "tests/entry.rs"
-name = "integration"
-
-[dependencies]
-anyhow = "1.0.66"
-chrono = "0.4.22"
-config = "0.13.2"
-poem = { version = "1.3.47", features = ["test"] }
-poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
-sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
-sea-orm-migration = "0.9.2"
-secrecy = { version = "0.8.0", features = ["serde"] }
-serde = { version = "1.0.144", features = ["derive"] }
-sqlx = { version = "0.6", default-features = false, features = ["postgres"] }
-tokio = { version = "1.21.0", features = ["full"] }
-tracing = "0.1.36"
-tracing-bunyan-formatter = "0.3.3"
-tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "std"] }
-unicode-segmentation = "1.10.0"
-validator = { version = "0.16.0", features = ["derive"] }
-
-[dev-dependencies]
-rand = "0.8.5"
-serial_test = "*"
-tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
-wiremock = "0.5"
-fake = "~2.3"
-serde_json = "1.0"
+[workspace]
+members = [".", "api", "migration"]
 
 [profile.release]
 strip = true
