--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -22,6 +22,7 @@ chrono = "0.4.22"
 config = "0.13.2"
 poem = { version = "1.3.47", features = ["test"] }
 poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
+rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
 sea-orm-migration = "0.9.2"
