--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,22 +19,25 @@ name = "integration"
 
 [dependencies]
 anyhow = "1.0.66"
+base64 = "0.21.0"
 chrono = "0.4.22"
 config = "0.13.2"
 poem = { version = "1.3.51", features = ["test"] }
 poem-openapi = { version = "2.0.22", features = ["swagger-ui"] }
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
-sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
-sea-orm-migration = "0.9.2"
+sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
+sea-orm-migration = "0.11.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.144", features = ["derive"] }
-sqlx = { version = "0.6", default-features = false, features = ["postgres"] }
+sqlx = { version = "0.6", default-features = false, features = ["postgres", "migrate"] }
+thiserror = "1.0.38"
 tokio = { version = "1.21.0", features = ["full"] }
 tracing = "0.1.36"
 tracing-bunyan-formatter = "0.3.3"
 tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "std"] }
 unicode-segmentation = "1.10.0"
+uuid = { version = "1.3.0", features = ["v4"] }
 validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
