--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "macros", "runtime-
 sea-orm-migration = "0.11.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.144", features = ["derive"] }
+sha3 = "0.10.6"
 sqlx = { version = "0.6", default-features = false, features = ["postgres", "migrate"] }
 thiserror = "1.0.38"
 tokio = { version = "1.21.0", features = ["full"] }
