--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,12 @@ name = "integration"
 
 [dependencies]
 anyhow = "1.0.66"
-argon2 = "0.4.1"
+argon2 = { version = "0.4.1", features = ["std"]}
 base64 = "0.21.0"
 chrono = "0.4.22"
 config = "0.13.2"
+# hmac = {version = "0.12", features=["std"]}
+# sha2 = "0.10"
 poem = { version = "1.3.51", features = ["test"] }
 poem-openapi = { version = "2.0.22", features = ["swagger-ui"] }
 rand = "0.8.5"
