--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,11 @@ chrono = "0.4.22"
 config = "0.13.2"
 # hmac = {version = "0.12", features=["std"]}
 # sha2 = "0.10"
-poem = { version = "1.3.51", features = ["test"] }
+poem = { version = "1.3.51", features = ["test", "redis-session"] }
 poem-openapi = { version = "2.0.22", features = ["swagger-ui"] }
 rand = "0.8.5"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
+redis = { version = "0.22.3", features = ["aio", "tokio-comp", "connection-manager"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"]}
 sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
 sea-orm-migration = "0.11.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
