--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,6 @@ name = "integration"
 anyhow = "1.0.66"
 argon2 = { version = "0.4.1", features = ["std"]}
 base64 = "0.21.0"
-chrono = "0.4.22"
 config = "0.13.2"
 # hmac = {version = "0.12", features=["std"]}
 # sha2 = "0.10"
@@ -36,7 +35,7 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.144", features = ["derive"] }
 sqlx = { version = "0.6", default-features = false, features = ["postgres", "migrate"] }
 thiserror = "1.0.38"
-tokio = { version = "1.21.0", features = ["full"] }
+tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.36"
 tracing-bunyan-formatter = "0.3.3"
 tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "std"] }
@@ -53,6 +52,9 @@ serde_json = "1.0"
 linkify = "0.9.0"
 once_cell = "1.16.0"
 migration = { path = "./migration" }
+
+[profile.dev]
+lto = false
 
 [profile.release]
 strip = true
