--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ anyhow = "1.0.66"
 argon2 = { version = "0.4.1", features = ["std"]}
 base64 = "0.21.0"
 config = "0.13.2"
+paste = "1.0.12"
 # hmac = {version = "0.12", features=["std"]}
 # sha2 = "0.10"
 poem = { version = "1.3.51", features = ["test", "redis-session"] }
