--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ serde_json = "1.0"
 linkify = "0.9.0"
 once_cell = "1.16.0"
 migration = { path = "./migration" }
+serde_urlencoded = "0.7.1"
 
 [profile.dev]
 lto = false
